[package]
name = "colle-content"
version = "0.1.0"
edition = "2018"

[dependencies.hyper-tls]
version = "0.5.0"
features = ["vendored"]

[dependencies.mupdf]
version = "0.3.0"
default-features = false

[dependencies.clap]
version = "3.0.10"
features = ["derive"]

[dependencies.hyper]
version = "0.14"
features = ["http1", "client", "server", "tcp"]

[dependencies.tokio]
version = "1"
features = ["fs", "rt", "macros"]
